# telco-customer-churn-web-app

./: .gitignore  app.py  feedback_log.csv  pyproject.toml  requirements.txt
notebooks/: eda_customer_churn.ipynb  preproccessing_and_training.ipynb  test.ipynb
notebooks/artifacts/: feature_names.joblib  logistic_churn_model.joblib  preprocessing_config.joblib  scaler.joblib
